<resources>
    <string name="app_name">TH_GUI_B1</string>
    <string name="a">Số A:</string>
    <string name="b">Số B:</string>
    <string name="result">Két quå</string>
    <string name="plus">TỔNG 2 SỐ</string>
    <string name="minus">HIỆU 2 SỐ</string>
    <string name="multiply">TÍCH 2 SỐ</string>
    <string name="divide">THƯƠNG 2 SỐ</string>
    <string name="gDivisor">ƯỚC CHUNG LỚN NHẤT</string>
    <string name="exit">THOÁT CHƯƠNG TRÌNH</string>
</resources>